[package]
name = "fintech-prompt-lib"
version = "0.1.0"
edition = "2021"
authors = ["Hamze ghalebi@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A banking and fintech-focused prompt engineering library for learning Rust and financial AI applications"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
